--- a/Mini Messageboard/views/form.ejs
+++ b/Mini Messageboard/views/form.ejs
@@ -7,5 +7,10 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <form method="POST" action="/new">
+      <input type="text" name="message" placeholder="write your message!">
+      <input type="text" name="user" placeholder="Username">
+      <input type="submit" value="submit">
+   </form>   
   </body>
 </html>
